--- a/locale/zh_CN/LC_MESSAGES/django.po
+++ b/locale/zh_CN/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-07 22:16+0800\n"
+"POT-Creation-Date: 2016-11-07 22:52+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,26 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+
+#: flow/models.py:8 flow/models.py:9
+msgid "add material"
+msgstr "耗材入库"
+
+#: flow/models.py:11
+msgid "resume material number"
+msgstr "剩余数量"
+
+#: flow/models.py:12
+msgid "add material number"
+msgstr "入库数量"
+
+#: flow/models.py:13 work/models.py:22
+msgid "material name"
+msgstr "耗材名称"
+
+#: flow/models.py:14 work/models.py:35
+msgid "class room number"
+msgstr "门牌号"
 
 #: work/models.py:8 work/models.py:9
 msgid "user profile"
@@ -30,21 +50,14 @@ msgstr "姓名"
 msgid "material"
 msgstr "耗材"
 
-#: work/models.py:22
-msgid "material name"
-msgstr "名称"
-
-#: work/models.py:24
+#: work/models.py:23
 msgid "material unit"
 msgstr "单位"
 
+#: work/models.py:24
 msgid "material now count"
 msgstr "剩余数量"
 
 #: work/models.py:32 work/models.py:33
 msgid "class room"
 msgstr "实训室"
-
-#: work/models.py:35
-msgid "class room number"
-msgstr "门牌号"
