--- a/locale/zh_CN/LC_MESSAGES/django.po
+++ b/locale/zh_CN/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-25 18:42+0800\n"
+"POT-Creation-Date: 2016-11-25 19:39+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -101,6 +101,10 @@ msgstr "耗材"
 #: work/models.py:31 work/models.py:32
 msgid "class room"
 msgstr "实训室"
+
+#: work/models.py:35
+msgid "class room admin"
+msgstr "管理员"
 
 #~ msgid "resume material number"
 #~ msgstr "剩余数量"
