1.添加重要功能，入库时如果该教室没有耗材则会自动生成耗材资料。 2.为完成上面的信息，对原有的AddMaterial类作了相应的属性修改。 3.将保存的内容移动到相应的Admin内做修改。 4.生成了迁移文件和中文化文件。

--- a/locale/zh_CN/LC_MESSAGES/django.po
+++ b/locale/zh_CN/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-30 20:27+0800\n"
+"POT-Creation-Date: 2016-11-30 21:01+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -26,20 +26,20 @@ msgstr "同意耗材使用申请"
 msgid "agree buy the material applicant"
 msgstr "同意耗材购买申请"
 
-#: flow/admin.py:92
+#: flow/admin.py:113
 #, python-format
 msgid ""
 "there is not the material u chosen in the class room,please call the class "
 "room administrator:%(admin)s."
 msgstr "在你所选择的教室内，没有你所选择的耗材，请联系教室管理员:%(admin)s。"
 
-#: flow/admin.py:96
+#: flow/admin.py:117
 #, python-format
 msgid ""
 "the material in the class room is not enough. %(number)s %(unit)s only. "
 msgstr "你所选择的教室耗材数量不够,只有%(number)s %(unit)s。"
 
-#: flow/admin.py:105 flow/models.py:32 flow/models.py:49
+#: flow/admin.py:126 flow/models.py:32 flow/models.py:49
 msgid "applicant"
 msgstr "申请人"
 
@@ -51,7 +51,8 @@ msgstr "耗材库存"
 msgid "stock material number"
 msgstr "库存"
 
-#: flow/models.py:16 flow/models.py:29 flow/models.py:45 work/models.py:11
+#: flow/models.py:16 flow/models.py:29 flow/models.py:45 flow/models.py:62
+#: work/models.py:11
 msgid "material name"
 msgstr "耗材名称"
 
@@ -95,11 +96,11 @@ msgstr "耗材入库"
 msgid "add material number"
 msgstr "入库数量"
 
-#: flow/models.py:62
-msgid "material info"
-msgstr "耗材信息"
-
 #: flow/models.py:63
+msgid "add material room number"
+msgstr "入库教室"
+
+#: flow/models.py:64
 msgid "add time"
 msgstr "入库时间"
 
@@ -119,35 +120,7 @@ msgstr "四川化工职业技术学院信工系"
 msgid "info.trainning class"
 msgstr "实训教研室"
 
-
-#: templates/admin/change_form.html:152
-msgid "Please correct the error below."
-msgstr "请改正下面的错误。"
-
-#: templates/admin/change_form.html:152
-msgid "Please correct the errors below."
-msgstr "请改正下面的错误。"
-
-
-#: templates/admin/index.html:26
-msgid "Show"
-msgstr "查看"
-
-msgid "Change"
-msgstr "查看"
-
-#: templates/admin/index.html:68
-msgid "added"
-msgstr "添加了"
-
-#: templates/admin/index.html:69
-msgid "changed"
-msgstr "修改了"
-
-#: templates/admin/index.html:70
-msgid "deleted"
-msgstr "删除了"
-
+#: work/admin.py:13 work/models.py:24
 msgid "class room admin"
 msgstr "管理员"
 
@@ -159,14 +132,25 @@ msgstr "耗材"
 msgid "class room"
 msgstr "实训室"
 
-#~ msgid "user profile"
-#~ msgstr "用户详情"
+#~ msgid "material info"
+#~ msgstr "耗材信息"
 
-#~ msgid "name"
-#~ msgstr "姓名"
+msgid "Please correct the error below."
+msgstr "请改正下面的错误。"
 
-#~ msgid "resume material number"
-#~ msgstr "剩余数量"
+msgid "Please correct the errors below."
+msgstr "请改正下面的错误。"
 
-#~ msgid "material now count"
-#~ msgstr "剩余数量"
+msgid "Change"
+msgstr "查看"
+
+msgid "added"
+msgstr "添加了"
+
+msgid "changed"
+msgstr "修改了"
+
+msgid "deleted"
+msgstr "删除了"
+
+
