1.修改unit（单位）为规格个。（仅在翻译上） 2.将耗材规格显示在库存和耗材入库上。 3.去除耗材修改、添加时原本的耗材规格。

--- a/locale/zh_CN/LC_MESSAGES/django.po
+++ b/locale/zh_CN/LC_MESSAGES/django.po
@@ -90,7 +90,7 @@ msgstr "耗材购买申请"
 
 #: flow/models.py:47 work/models.py:13
 msgid "material unit"
-msgstr "耗材单位"
+msgstr "耗材规格"
 
 #: flow/models.py:51
 msgid "buy material total"
