1.修改耗材领用申请中流程申请人的显示 2.修正国际化翻译的错误以正常显示领用的申请数量

--- a/locale/zh_CN/LC_MESSAGES/django.po
+++ b/locale/zh_CN/LC_MESSAGES/django.po
@@ -84,7 +84,7 @@ msgstr "耗材领用申请"
 
 #: flow/models.py:45
 msgid "apply use number"
-msgstr "剩余数量"
+msgstr "申请领用数量"
 
 #: flow/models.py:46
 msgid "buy material process"
